<resources>
    <string name="app_name">HopeItApp</string>
    <string name="hopeit_log_decription">hopeIT log</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="menu_main">Strona główna</string>
    <string name="no_server_connection">Brak połączenia z Internetem, możesz tylko przeglądać</string>
    <string name="title_main">Strona główna</string>
    <string name="patient_place_holder">Patient placeholder</string>
    <string name="patient_picture_description">Patient picture</string>
    <string name="pomagam_button">Pomagam</string>
    <string name="patient_picture_overlay">patient picture overlay</string>
    <string name="title_payments">Moje akcje</string>
    <string name="menu_payments">Moje akcje</string>

    <string name="payu_language">Auto</string> <!-- auto | Polish | English | Czech | German -->
    <string name="payu_environment">local</string> <!-- local | production | sandbox -->
    <string name="payu_token_service_class_full_qualified_name">com.example.service.YourTokenProvide
rService</string>
    <string name="patient_place_holder2">Patient placeholder</string>
    <string name="message_place_holder">sdfhbsdkbh</string>
    <string name="message_title_place_holder">Title</string>
    <string name="message_date_place_holder">2137-21-37</string>
    <string name="menu_messages">Wiadomości</string>
    <string name="title_messages">Wiadomości od fundacji</string>
    <string name="info_image">info image</string>
    <string name="info_info">Aplikacja powstała na Hakatonie HopeIT \n\nPrzewozy Regionalne: \nMichał Zając,\nJan Librowski,\nSławomir Górawski,\nJakub Dorda</string>
    <string name="menu_info">Informacje</string>
    <string name="drower_background">drower background</string>
</resources>
