<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="7dp"
    android:layout_marginTop="7dp"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

    <TextView
        android:id="@+id/notification_hist_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textDisabled"
        android:layout_marginBottom="0dp"
        android:textAlignment="textEnd"
        android:text="@string/message_date_place_holder"/>

    <TextView
        android:id="@+id/notification_hist_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:textStyle="bold"
        android:textColor="@color/textPrimary"
        android:textSize="18sp"
        android:text="@string/message_title_place_holder"/>

    <TextView
        android:id="@+id/notification_hist_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15sp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/textSecondary"
        android:textSize="15sp"
        android:text="@string/message_place_holder"/>
    </LinearLayout>

    <include layout="@layout/divider" />

</LinearLayout>