<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/payment_patient_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="17sp"
            android:text="@string/patient_place_holder2"/>

        <TextView
            android:id="@+id/payment_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/textBlack"
            android:layout_below="@id/payment_patient_name"
            android:text="@string/patient_place_holder2"/>

        <FrameLayout
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true">

            <ImageView
                android:id="@+id/payment_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/patient_picture_description"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/gradient"
                android:contentDescription="@string/patient_picture_overlay"/>

        </FrameLayout>


    </RelativeLayout>

    <include layout="@layout/divider"/>

</LinearLayout>